--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ Gemfile.lock
 _tmp*
 tmp*
 tags
+*.pth
+*.tif
+*.tiff
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -35,6 +38,8 @@ parts/
 sdist/
 var/
 wheels/
+data/
+
 *.egg-info/
 .installed.cfg
 *.egg
